[tool.poetry]
name = "auot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fortnitepy = "^3.4.0"
aioconsole = "^0.3.1"
crayons = "^0.4.0"
sanic = "^20.12.2"
discord = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
